In place help now records to user column viewed_help, only displays if never seen before.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,13 +2,37 @@
 %html
   %head
     = render "layouts/head"
+    :javascript
+      var viewed_help = #{current_user.get_viewed_help};
+      var all_help = #{get_all_help.to_json};
+      var mark_read_url = '#{mark_help_read_url}';
+      $(function(){
+        for(help_pop in all_help){
+          console.log(help_pop);
+          if(viewed_help.indexOf(help_pop) < 0){
+            $('#'+help_pop).popover({
+              trigger: 'manual',
+              placement: all_help[help_pop].placement,  
+              template: '<div class="popover" data-id="'+help_pop+'"><div class="arrow"></div><div class="popover-inner"><div class="popover-content"><p></p></div><a class="popover-close"></a></div></div>',
+              content: all_help[help_pop].content,            
+            });
+            $('#'+help_pop).popover('show');
+          }
+        }
+        
+        $(".popover-close").click(function(){
+          var $popover = $(this).parents(".popover");
+          $popover.fadeOut();
+          $.ajax({ data: { id: $popover.attr("data-id") }, url: mark_read_url });
+        });
+      });
   %body
-    = render "layouts/navbar"
     - if current_user
       = render "layouts/explore_modal"
       = render "layouts/launchpad_modal"
     - else
       = render "layouts/login_modal"
+    = render "layouts/navbar"
     %div.container.body{ style: "padding-top: 51px;" }
       - flash.each do |key, value|
         = content_tag(:div, value, :class => "alert alert-#{key}")
