Fixing last few IPH bugs.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     = render "layouts/head"
     :javascript
-      var viewed_help = #{current_user.nil? ? [] : current_user.get_viewed_help};
+      var viewed_help = #{get_viewed_help};
       var all_help = #{get_all_help.to_json};
       var mark_read_url = '#{mark_help_read_url}';
       $(function(){ init_iph(); });
