--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -56,11 +56,11 @@
             %div{ style: "padding: 3px 0px;"}
               %ul.profile_dropdown{ style: "list-style: none; margin: 0 0 0 4px;"}
                 %li.CR_dropdown_option 
-                  %a{href:"#"} Answer this Creative Response
+                  = link_to "Answer this question", take_section_path(r.task.section_id, task_id: r.task.id)
                 %li.CR_dropdown_option
-                  %a{href:"#"} Filter by this question
+                  = link_to "View all answers", task_drilldown_path(r.task.id)
                 %li.CR_dropdown_option
-                  %a{href:"#"} View all comments         
+                  = link_to "View all comments", submission_drilldown_path(r.submitted_answer.id)         
       %div#cr_pop.CRarea
         - if r.task.answer_sub_type == Task::TEXT
           %pre{ style: "margin:20px; word-break:normal;" }= r.submitted_answer.content
