--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -46,8 +46,8 @@
                 %input{type:"radio", name:"optionsRadios", id:"optionsRadios1", value:"Text"}
                 Text response             
               %label
-              %button.btn-danger{style: "float:right;"} Submit
-            %div{style: "display:inline-block; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
+              %button.button.button-actionable{style: "float:right;"} Continue
+            %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
               %h4 
                 %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;"}
                 Tips:
@@ -57,7 +57,7 @@
                 %li Make sure you check for spelling and grammar.
         %div.task_view
           - if @challenge_tasks.empty?
-            %p No challenge tasks available.
+            %p No Challenge tasks available.
           - else
             %table
               - @challenge_tasks.each do |t|
@@ -76,7 +76,23 @@
                       = link_to "Incomplete", take_section_path(@current_section, task_id: t.id), class: "label label-important"
       %div#achievements_tab.tab_content{ style: "display: none;" }
         %div.editor_view{ style: "display: none;" }
-          %p Content creator
+          %form{style: "width:600px; padding:0 0 0 10px; height:90%; margin-top:-10px;"}
+            %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
+              %legend{style:"margin-bottom:5px; "} Create a CR
+              %h4{style:"margin-top:12px; font-size:14px;"} Your question:
+              %div{style:"margin-left:12px;"}
+                %span{style:"font-weight:bold;font-size:14px;"} Your question text goes right here
+              %h4{style:"margin-top:12px; font-size:14px; "} Here's where your question will appear:
+              %div{style:"margin-left:12px;"}
+                %span{style:" font-size:14px;"} Challenge:
+                %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.path.name}
+                %br/
+                %span{style:" font-size:14px;"} Section: 
+                %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.name}
+              %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Do you want to also post an answer to this question?
+              %button.button{style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"}Back
+              %button.button.button-actionable{style:"margin-left:12px;"}Yes!
+              %button.button.button-info{style:""}Nah, just publish my question
         %div.task_view
           - if @achievement_tasks.empty?
             %p No tasks available.
