level progress bar in launchpad

--- a/app/views/layouts/_launchpad_modal.html.haml
+++ b/app/views/layouts/_launchpad_modal.html.haml
@@ -9,6 +9,11 @@
           %div{style:"position:relative; bottom:10px; "}
             %span{ } #{@path.name} 
             %span{ style: "font: normal 18px 'MuliItalic', sans-serif;" } - #{@enrollment.total_points} pts, Level #{current_user.level(@path)}
+          %div{style:"float:right; position:relative; top:3px; margin-right:12px; "}
+            %span{style:"font-size:21px;"} Level #{current_user.level(@path)}
+            %span{style:"font-size:14px;"} XXX pts to level up
+            %div.progress.progress-success.progress-striped{style:"height:10px; margin-bottom:0;"}
+              %div.bar{style:"width:30%;"}
         %div.launchpadcontent
           %div.launchpadsectioncolumn
             %div.launchpadcolumnheader
