--- a/app/assets/stylesheets/launchpad.css
+++ b/app/assets/stylesheets/launchpad.css
@@ -3,7 +3,7 @@
 .launchpad h1>img { border-radius:4px; height:36px; width:36px; }
 .launchpad h1>div { position:relative; bottom:8px; display:inline;}
 .launchpadcontent { margin-left:10px; margin-top:10px; border-collapse:collapse; }
-.launchpadpoints { font-weight:bold; font-size:11px; font-style:italic; white-space:nowrap; margin-right: 5px; }
+.launchpadpoints { font-weight:bold; font-size:11px; white-space:nowrap; }
 .launchpadsectioncolumn { display: inline-block; border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; padding: 10px;width: 160px;vertical-align: top; overflow: auto; height: 330px;}
 .launchpadCRcolumn { width: 100%; display:inline-block; vertical-align: top; overflow:auto; }
 .launchpadCRcolumn table { width: 100%; }
