--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -70,8 +70,7 @@
                   %td.question_status
                     - if t.status_id
                       = link_to "Completed", user_path(current_user, task: t.id), class: "label label-success", target: "_blank"
-                      %br
-                      %span.launchpadpoints= t.points_awarded.to_i.to_s + " points"
+                      %div.launchpadpoints= t.points_awarded.to_i.to_s + " points"
                     - else
                       = link_to "Incomplete", take_section_path(@current_section, task_id: t.id), class: "label label-important"
       %div#achievements_tab.tab_content{ style: "display: none;" }
