cosmetic launchpad changes

--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -1,7 +1,7 @@
 %div.sectioninfocontainer
   %div.launchpadCRcolumn
     %div.launchpadcolumnheader
-      %button#editor_link.button.button-small.button-info{ style: "margin-top: -5px;" } Create a Question
+      %button#editor_link.button.button-small.button-info{ style: "margin-top: -5px; text-shadow:none;" } Create a Question
       %ul.nav.nav-tabs
         %li.active
           %a#arena_tab_link{ href: "#arena_tab", title: "Arena"} Arena
