--- a/app/views/layouts/_login_modal.html.haml
+++ b/app/views/layouts/_login_modal.html.haml
@@ -10,7 +10,7 @@
           %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", :style => "height:45px;" } 
           %span{style: "font-size:26px;"} Welcome to MetaBright! 
       %hr{ style: "margin: 0;" }
-      %div.explorebody{ style: "min-height: 245px; max-height: 450px; overflow-y: auto;" }
+      %div.explorebody{ style: "min-height: 235px;" }
         %center
           %p{ style: "padding: 10px; font-size: 14px;" } We believe that everyone has the right to be recognized for their knowledge and skills. From accordion playing to zoology, compete with others, and grow together.
           %div
