--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -2,6 +2,7 @@
   .container.body { background-color: transparent; border: 0px; box-shadow: none;}
   #content { padding-top: 0px; }
 
+
 = form_for(@task, url: took_section_path(@section, task_id: @task.id), html: { id: "challenge_form", multipart: true }) do |f|
   :javascript
     $(function(){
@@ -85,5 +86,6 @@
               %a#checkin_button.button.button-standard Confirm
       %div.CRbuttonspace
         = link_to "Back", path_path(@section.path, completed: true), class: "button button-standard", style: "float: left;"
+        %a.arena_report_link{href:"#", style: "position:relative; top:8px; margin-left:10px; text-decoration:none;"} Report this question
         = submit_tag "Submit", :class => "button button-actionable", :id => "submit_button", style: "float:right;"
         = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/loading.gif", size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image"
