--- a/app/views/layouts/_launchpad_modal.html.haml
+++ b/app/views/layouts/_launchpad_modal.html.haml
@@ -8,11 +8,11 @@
           = image_tag(@path.path_pic, style:"vertical-align:baseline;")
           %div{style:"position:relative; bottom:10px; "}
             %span{ } #{@path.name}
-          %div{style:"float:right; position:relative; top:3px; margin-right:12px; "}
-            %span{style:"font-size:21px;"} Level #{current_user.level(@path)}
-            %span{style:"font-size:14px;"} XXX pts to level up
+          %div{style:"float:right; position:relative; top:3px; width: 205px; height; 42px; overflow-y: hidden; margin-right:12px; "}
+            %span{style:"font-size:21px;"} Level #{@enrollment.level}
+            %span{style:"font-size:14px;"} #{@enrollment.points_to_next_level} pts to level up
             %div.progress.progress-success.progress-striped{style:"height:10px; margin-bottom:0;"}
-              %div.bar{style:"width:30%;"}
+              %div.bar{style:"width: #{@enrollment.level_percent}%;" }
         %div.launchpadcontent
           %div.launchpadsectioncolumn
             %div.launchpadcolumnheader
