create a arena question and create a task draft flows in -- code doesn't load in live environment

--- a/app/views/layouts/_report_issue_modal.html.haml
+++ b/app/views/layouts/_report_issue_modal.html.haml
@@ -19,11 +19,11 @@
             %label.radio
               %input{type:"radio", name:"CR_reporting_Radios", id:"CR_reporting_Radios2", value:"report2"} Spelling or grammatical error
             %label.radio
-              %input{type:"radio", name:"CR_reporting_Radios", id:"CR_reporting_Radios3", value:"report3"} This question doesn't belong in this section
+              %input{type:"radio", name:"CR_reporting_Radios", id:"CR_reporting_Radios3", value:"report3"} Doesn't belong in this section or Challenge
             %label.radio
-              %input{type:"radio", name:"CR_reporting_Radios", id:"CR_reporting_Radios4", value:"report4"} This question doesn't belong in this Challenge
+              %input{type:"radio", name:"CR_reporting_Radios", id:"CR_reporting_Radios4", value:"report4"} Too similar to another question
             %label.radio
-              %input{type:"radio", name:"CR_reporting_Radios", id:"CR_reporting_Radios5", value:"report5"} This question is so poor that it detracts from the Challenge
+              %input{type:"radio", name:"CR_reporting_Radios", id:"CR_reporting_Radios5", value:"report5"} So poor that it detracts from the Challenge
             %label.radio
               %input{type:"radio", name:"CR_reporting_Radios", id:"CR_reporting_Radios6", value:"report6"} Copyrighted material 
             %button.button.button-actionable{style:"float:right; margin-bottom:10px;"} Submit
