--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -10,8 +10,54 @@
         %li
           %a#achievement_tab_link{ href: "#achievements_tab", title: "Tasks"} Tasks      
       %div#arena_tab.tab_content{style:"margin-left:12px;"}
-        %div.editor_view{ style: "display: none;" }
-          %p Content creator
+        %div.editor_view{ style: "display: none; height:100%;" }
+          = form_for(@current_section.tasks.new, remote: true, html: { style: "width:600px; padding:0 0 0 10px; height:90%; margin-top:-10px;" }) do |f|
+            %div.step1
+              = f.hidden_field(:answer_type, value: Task::CREATIVE)
+              = f.hidden_field(:section_id, value: @current_section.id)
+              = f.hidden_field(:source, value: "launchpad")
+              %fieldset{style: "display: inline-block; margin-right:28px; width:56%;"}
+                %legend Create an Arena question
+                %label What's your question?
+                = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")
+                %span.help-block What are the possible answers to this question?
+                %label Correct answer
+                %input{type:"text", placeholder:"Required"}
+                %label Wrong answer
+                %input{type:"text", placeholder:"Required"}
+                %label Wrong answer
+                %input{type:"text", placeholder:""}
+                %label Wrong answer
+                %input{type:"text", placeholder:""}
+                %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
+              %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
+                %h4 
+                  %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;"}
+                  Tips:
+                %ul{style:"font-size:13px;"}
+                  %li Questions should cover the core knowledge area of the section they're placed.
+                  %li Keep the tone informal but direct.
+                  %li Make sure you check for spelling and grammar.
+            %div.step2{ style: "display: none;" }
+              %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
+                %legend{style:"margin-bottom:5px; "} Create an Arena question
+                %h4{style:"margin-top:12px; font-size:14px;"} Your question:
+                %div{style:"margin-left:12px;"}
+                  %span.question{style:"font-weight:bold;font-size:14px;"}
+                %h4{style:"margin-top:12px; font-size:14px; "} Here's where this Arena question will appear:
+                %div{style:"margin-left:12px;"}
+                  %span{style:" font-size:14px;"} Challenge:
+                  %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.path.name}
+                  %br/
+                  %span{style:" font-size:14px;"} Section: 
+                  %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.name}
+                %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Ready to post?
+                %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
+                = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
+            %div.step3{ style: "display: none;" }
+              %p This is done!
+              %a.restart.button.button-actionable{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Create another Arena question
+              %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
         %div.task_view
           - if @core_tasks.empty?
             %p No core tasks available.
@@ -39,7 +85,7 @@
                 %legend Create your own question
                 %label What's your question?
                 = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")
-                %div.control-group
+                %div.control-group{style:"width:350px;"}
                   %div.controls
                     = render "stored_resources/new_image"
                 %label What type of response should people give?
@@ -67,7 +113,7 @@
                 %h4{style:"margin-top:12px; font-size:14px;"} Your question:
                 %div{style:"margin-left:12px;"}
                   %span.question{style:"font-weight:bold;font-size:14px;"}
-                %h4{style:"margin-top:12px; font-size:14px; "} Here's where your question will appear:
+                %h4{style:"margin-top:12px; font-size:14px; "} Here's where this question will appear:
                 %div{style:"margin-left:12px;"}
                   %span{style:" font-size:14px;"} Challenge:
                   %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.path.name}
@@ -101,7 +147,45 @@
                     - else
                       = link_to "Incomplete", take_section_path(@current_section, task_id: t.id), class: "label label-important"
       %div#achievements_tab.tab_content{ style: "display: none;" }
-        %div.editor_view{ style: "display: none;" }
+        %div.editor_view{ style: "display: none; height:100%;" }
+          = form_for(@current_section.tasks.new, remote: true, html: { style: "width:600px; padding:0 0 0 10px; height:90%; margin-top:-10px;" }) do |f|
+            %div.step1
+              = f.hidden_field(:answer_type, value: Task::CREATIVE)
+              = f.hidden_field(:section_id, value: @current_section.id)
+              = f.hidden_field(:source, value: "launchpad")
+              %fieldset{style: "display: inline-block; margin-right:28px; width:56%;"}
+                %legend Create a Task
+                %label What's the Task?
+                = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")                
+                %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
+              %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
+                %h4 
+                  %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;"}
+                  Tips:
+                %ul{style:"font-size:13px;"}
+                  %li Tasks should serve as a guide to improving at the section.
+                  %li Keep the tone informal but direct.
+                  %li Make sure you check for spelling and grammar.
+            %div.step2{ style: "display: none;" }
+              %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
+                %legend{style:"margin-bottom:5px; "} Create a Task
+                %h4{style:"margin-top:12px; font-size:14px;"} Your new Task:
+                %div{style:"margin-left:12px;"}
+                  %span.question{style:"font-weight:bold;font-size:14px;"}
+                %h4{style:"margin-top:12px; font-size:14px; "} Here's where this Task will appear:
+                %div{style:"margin-left:12px;"}
+                  %span{style:" font-size:14px;"} Challenge:
+                  %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.path.name}
+                  %br/
+                  %span{style:" font-size:14px;"} Section: 
+                  %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.name}
+                %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Ready to post?
+                %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
+                = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
+            %div.step3{ style: "display: none;" }
+              %p This is done!
+              %a.restart.button.button-actionable{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Create another Task
+              %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
         %div.task_view
           - if @achievement_tasks.empty?
             %p No tasks available.
