--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -11,26 +11,26 @@
           %a#achievement_tab_link{ href: "#achievements_tab", title: "Tasks"} Tasks      
       %div#arena_tab.tab_content{style:"margin-left:12px;"}
         %div.editor_view{ style: "display: none; height:100%;" }
-          = form_for(@current_section.tasks.new, remote: true, html: { style: "width:600px; padding:0 0 0 10px; height:90%; margin-top:-10px;" }) do |f|
+          = form_for(@current_section.tasks.new, remote: true, html: { style: "width:599px; padding:0 0 0 10px; height:90%; margin-top:-10px;" }) do |f|
             %div.step1
               = f.hidden_field(:answer_type, value: Task::CREATIVE)
               = f.hidden_field(:section_id, value: @current_section.id)
               = f.hidden_field(:source, value: "launchpad")
-              %fieldset{style: "display: inline-block; margin-right:28px; width:56%;"}
+              %fieldset{style: "display: inline-block; margin-right:16px; width:58.1%;"}
                 %legend Create an Arena question
-                %label What's your question?
+                %span.help-block What's your question?
                 = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")
-                %span.help-block What are the possible answers to this question?
+                %span.help-block What are the possible answers?
                 %label Correct answer
-                %input{type:"text", placeholder:"Required"}
+                %input{type:"text", placeholder:"Required", style:"margin-left:22px;"}
                 %label Wrong answer
-                %input{type:"text", placeholder:"Required"}
+                %input{type:"text", placeholder:"Required", style:"margin-left:27px;"}
                 %label Wrong answer
-                %input{type:"text", placeholder:""}
+                %input{type:"text", placeholder:"Optional", style:"margin-left:27px;"}
                 %label Wrong answer
-                %input{type:"text", placeholder:""}
+                %input{type:"text", placeholder:"Optional", style:"margin-left:27px;"}
                 %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
-              %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
+              %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:199px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
                 %h4 
                   %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;"}
                   Tips:
