--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -26,7 +26,7 @@
     
   %div.exploreheader
     - unless current_user.personas.empty?
-      %div.modal_close{ style: "margin-right:11px;" }
+      %div.modal_close{ style: "margin: -8px 14px 0 0;" }
         %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
     %div{ style: "padding-bottom:8px;" }
       = image_tag @persona.picture, style: "position:relative; bottom:2px;"
