--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -90,13 +90,13 @@
                     = render "stored_resources/new_image"
                 %label What type of response should people give?
                 %label.radio
-                  = f.radio_button(:answer_sub_type, Task::TEXT)
+                  = f.radio_button(:answer_sub_type, Task::TEXT, class: "answer_sub_type")
                   Text response
                 %label.radio
-                  = f.radio_button(:answer_sub_type, Task::IMAGE)
+                  = f.radio_button(:answer_sub_type, Task::IMAGE, class: "answer_sub_type")
                   Image upload
                 %label.radio
-                  = f.radio_button(:answer_sub_type, Task::YOUTUBE)
+                  = f.radio_button(:answer_sub_type, Task::YOUTUBE, class: "answer_sub_type")
                   YouTube video
                 %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
               %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
@@ -238,7 +238,21 @@
       $(".editor_view").each(function(){
         var $editor = $(this);
         $editor.find(".step1 a.next").click(function(){
-          console.log($editor.find("textarea[name='task[question]']").val());
+          if($editor.find("textarea").val() == ""){
+            return false;
+          }
+          if($editor.find("input[name*=answer_type]").val() == 0){
+            if($editor.find("input[name*=answer_sub_type]:checked").size() == 0){
+              return false;
+            }
+          } else if ($editor.find("input[name*=answer_type]").val() == 2){
+            if($editor.find("input[name*=answer1]").val() == ""){
+              return false;
+            }
+            if($editor.find("input[name*=answer2]").val() == ""){
+              return false;
+            }
+          }
           $editor.find(".step2 span.question").text($editor.find("textarea[name='task[question]']").val());
           $editor.find(".step1").hide();
           $editor.find(".step2").show();
